--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,8 @@
 <div class="col-md-12">
     <ul class="nav nav-tabs nav-pills" style="background-color: white">
         <li routerLinkActive="active" class="nav-item col-md-2">
-            <a routerLink="/home" (click)="home()" class="nav-link"><img src="assets/img/logos/Simbolo flor COR.png" alt="logo"
-                    width="30" height="30">
+            <a routerLink="/home" (click)="home()" class="nav-link"><img src="assets/img/logos/Simbolo flor COR.png"
+                    alt="logo" width="30" height="30">
                 Bem-vindo</a>
         </li>
         <li routerLinkActive="active" class="nav-item">
@@ -10,9 +10,10 @@
         </li>
         <div *ngIf="!isBlog">
             <li routerLinkActive="active" *ngFor="let link of links" class="dropdown nav-item">
-                <a pageScroll class="dropdown-toggle nav-link" href="#{{link.id}}">{{link.title}}<span
-                        class="sr-only">(current)</span></a>
-                <div *ngIf="link.subLink" class="dropdown-content">
+                <a pageScroll (click)="subLink()" class="dropdown-toggle nav-link" data-hover="dropdown"
+                    href="#{{link.id}}">{{link.title}}<span class="sr-only">(current)</span></a>
+                <!--div *ngIf="link.subLink" [ngClass]="showSubLink === 'none'? 'dropdown-content' : '' "-->
+                <div *ngIf="link.subLink" class="dropdown-content" style="margin-top: -50px;">
                     <ul>
                         <li *ngFor="let subLink of link.subLinks">
                             <a pageScroll href="#{{subLink.id}}"><strong>{{subLink.title}}</strong></a>
