--- a/src/app/blog/blog.component.html
+++ b/src/app/blog/blog.component.html
@@ -1,12 +1,12 @@
 <div class="col-md-12 mt-4">
   <div class="row">
-    <div class="col-md-4">
+    <div *ngFor="let images of blogImages" class="col-md-3">
       <div class="card" style="width: 25rem;">
-        <img class="card-img-top" src="assets/img/images/foto 1.jpg" alt="Card image cap">
+        <img class="card-img-top" src="assets/img/images/{{images.imageName}}" alt="Card image cap">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
+          <h5 class="card-title">{{images.title}}</h5>
           <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
+          <a href="#" class="btn btn-primary">Acessar matéria</a>
         </div>
       </div>
     </div>
