--- a/src/app/page-not-found/page-not-found.component.html
+++ b/src/app/page-not-found/page-not-found.component.html
@@ -1,1 +1,19 @@
-<p>page-not-found works!</p>
+<div class="container">
+    <div class="row">
+        <div class="col-md-12">
+            <div class="error-template">
+                <h1>
+                    Oops!</h1>
+                <h2>
+                    404 Página não encontrada</h2>
+                <div class="error-details">
+                    Desculpe, um erro ocorreu, a página solicitada não foi encontrada!
+                </div>
+                <div class="error-actions">
+                    <a href="/" class="btn btn-primary btn-lg"><span class="glyphicon glyphicon-home"></span>
+                        Me leve para a página inicial </a>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
